include/sonare/sonare_c_mixing.h

// ============================================================================
// Mixing assistant
// ============================================================================
//
// Analyses a set of tracks and returns a suggested mixer scene. The assistant
// only ever returns parameters: it does not process audio and it does not apply
// anything. Feeding the suggestion to the mixer is the caller's separate,
// explicit step through sonare_mixer_from_scene_json, and there is deliberately
// no entry point that performs both halves at once.
//
// Everything here is offline / control-thread only. It allocates, runs an STFT
// per track and evaluates every track pair.
//
// Multi-track input follows the same planar convention as
// sonare_mixer_process_stereo: parallel arrays of per-track channel pointers,
// with @c input_right entries NULL for a mono track. Unlike the block-processing
// entry point, tracks may differ in length, so lengths arrive as a per-track
// array rather than one shared count; truncating every track to the shortest
// would delete a part that only enters late in the song.

// Analyses @c input_count tracks and writes a suggested scene, the measurements
// behind it and a human-readable explanation as a JSON object.
//
// @param input_left   Per-track left/mono channel pointers; @c input_count entries.
// @param input_right  Per-track right channel pointers, or NULL for an all-mono
//                     set. Individual entries may be NULL for a mono track.
// @param track_ids    Per-track strip identifiers; @c input_count entries, each
//                     non-NULL and unique. Both are enforced, not assumed: a
//                     NULL or a repeated id returns
//                     @c SONARE_ERROR_INVALID_PARAMETER. A repeated id would
//                     otherwise produce a scene the mixer refuses to load, and
//                     the refusal names the scene rather than the two tracks
//                     that collided.
// @param track_names  Optional per-track display names used only as a
//                     classification hint, or NULL. Individual entries may be NULL.
// @param track_lengths Per-track frame counts; @c input_count entries.
// @param input_count  Number of tracks. Zero yields an empty suggestion.
// @param sample_rate  Shared sample rate for every track.
// @param params       Flat configuration; accepts targetTrackLufs,
//                     suggestionStrength, eqMaxCutDb, mixBusHeadroomDbtp,
//                     enableStructure,
//                     enableGain, enableBalance, enableEq, enableDynamics,
//                     enableImage, enableHighPass, nFft and hopLength.
// @param param_count  Number of entries in @c params.
// @param json_out     Receives the result JSON. Release with sonare_free_string().
//
// A track carrying a NaN or an infinity is not an error: it comes back in the
// result document as unusable, with "track has non-finite samples" as its
// exclusionReason, so the buffer is named rather than diagnosed as silence.
//
// Returns @c SONARE_ERROR_NOT_SUPPORTED when the library was built without the
// mixing assistant.
SonareError sonare_mixing_assistant_suggest(
    const float* const* input_left, const float* const* input_right, const char* const* track_ids,
    const char* const* track_names, const size_t* track_lengths, size_t input_count,
    int sample_rate, const SonareMasteringParam* params, size_t param_count, char** json_out);
// As sonare_mixing_assistant_suggest, but writes only the suggested scene, in
// the same schema sonare_mixer_from_scene_json reads. Provided so a caller that
// wants to apply a suggestion does not have to dig the scene out of the fuller
// result document and re-serialise it.
// Free *json_out with sonare_free_string.
SonareError sonare_mixing_assistant_suggest_scene_json(
    const float* const* input_left, const float* const* input_right, const char* const* track_ids,
    const char* const* track_names, const size_t* track_lengths, size_t input_count,
    int sample_rate, const SonareMasteringParam* params, size_t param_count, char** json_out);
// Returns the source-class identifiers the assistant can report, separated by
// '\n'. Backed by thread-local storage REBUILT ON EVERY CALL, so the pointer is
// valid only until the next call to this function on the same thread — unlike
// the mastering *_names getters, whose storage is built once and stays valid
// for the thread's lifetime. Copy the string if you need to hold it across
// another call. Do NOT cache it across threads or free it. Never NULL: a build
// without the assistant returns the empty string.
const char* sonare_mixing_assistant_source_class_names(void);
// Resolves a source-class identifier to its enum value, or -1 when unknown.
int sonare_mixing_assistant_source_class_from_name(const char* name);